# Kroll-Katehok-backend

./: .gitignore  README.md
diargrams/drawio/: ER.drawio  activity.drawio  sequence.drawio  use-case.drawio
guide/: CREATE_ENV.md  INSTALL_DEV_ENV_TOOLS.md  README.md
project/: pyproject.toml
project/goods_catalog/catalog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
project/goods_catalog/goods_catalog/: asgi.py  settings.py  urls.py
project/goods_catalog/support/: forms.py  models.py  tests.py  urls.py
project/goods_catalog/users/: models.py  urls.py  views.py
virtual/: .env  .env.dev  Vagrantfile  docker-compose.yaml  nginx.conf
virtual/django/: .flake8  Dockerfile  manage.py  pyproject.toml
virtual/django/catalog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
virtual/django/catalog/static/css/: main.css
virtual/django/catalog/templates/: base.html
virtual/django/catalog/templates/catalog/: catalog.html  form_product.html  product.html
virtual/django/catalog/templates/file-demo/: base.html  login.html  main.css  register.html
virtual/django/goods_catalog/: settings.py  wsgi.py
virtual/django/start/: create_superuser.py  filler.py
virtual/django/support/: admin.py  forms.py  models.py  tests.py  views.py
virtual/django/support/templates/support/: view_ticket_detail.html  view_tickets.html
virtual/django/users/: forms.py  models.py  tests.py  urls.py  views.py
virtual/django/users/templates/users/: login.html  register.html
virtual/notif/: main.py
virtual/secrets/: smtp_password.txt
(+19 files in other folders)
