[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Katehok <a.timin2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
flake8 = "^7.1.1"
redis = "^5.2.1"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
